// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-modal #render should render default button 1`] = `
<gux-button title="default">
  <!---->
  <button class="gux-secondary" title="default" type="button">
    Button
  </button>
</gux-button>
`;

exports[`gux-modal #render should render disabled default button 1`] = `
<gux-button disabled="" title="default">
  <!---->
  <button class="gux-secondary" disabled="" title="default" type="button">
    Button
  </button>
</gux-button>
`;

exports[`gux-modal #render should render disabled invalid accent button 1`] = `
<gux-button accent="invalid" disabled="" title="Invalid accent">
  <!---->
  <button class="gux-secondary" disabled="" title="Invalid accent" type="button">
    Invalid accent
  </button>
</gux-button>
`;

exports[`gux-modal #render should render disabled primary button 1`] = `
<gux-button accent="primary" disabled="" title="default">
  <!---->
  <button class="gux-primary" disabled="" title="default" type="button">
    Button
  </button>
</gux-button>
`;

exports[`gux-modal #render should render disabled secondary button 1`] = `
<gux-button accent="secondary" disabled="" title="default">
  <!---->
  <button class="gux-secondary" disabled="" title="default" type="button">
    Button
  </button>
</gux-button>
`;

exports[`gux-modal #render should render invalid accent button 1`] = `
<gux-button accent="invalid" title="Invalid accent">
  <!---->
  <button class="gux-secondary" title="Invalid accent" type="button">
    Invalid accent
  </button>
</gux-button>
`;

exports[`gux-modal #render should render primary button 1`] = `
<gux-button accent="primary" title="default">
  <!---->
  <button class="gux-primary" title="default" type="button">
    Button
  </button>
</gux-button>
`;

exports[`gux-modal #render should render secondary button 1`] = `
<gux-button accent="secondary" title="default">
  <!---->
  <button class="gux-secondary" title="default" type="button">
    Button
  </button>
</gux-button>
`;
